// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render areas.actions - value[0] 1`] = `
<div
  class="ant-comment"
  id="areas.actions"
>
  <div
    class="ant-comment-inner"
  >
    <div
      class="ant-comment-avatar"
    >
      <span
        class="ant-avatar ant-avatar-circle emotion-0"
        id="undefined_id"
      >
        <span
          class="ant-avatar-string"
          style="transform: scale(1) translateX(-50%);"
        >
          Co
        </span>
      </span>
    </div>
    <div
      class="ant-comment-content"
    >
      <div
        class="ant-comment-content-author"
      >
        <span
          class="ant-comment-content-author-name"
        >
          Comment author
        </span>
        <span
          class="ant-comment-content-author-time"
        >
          This is not the time
        </span>
      </div>
      <div
        class="ant-comment-content-detail"
      >
        Comment content for user
      </div>
      <ul
        class="ant-comment-actions"
      >
        <li>
          <div
            data-testid="area-actions"
            style="border: 1px solid red; padding: 10px;"
          >
            actions
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Render default - value[0] 1`] = `
<div
  class="ant-comment"
  id="default"
>
  <div
    class="ant-comment-inner"
  >
    <div
      class="ant-comment-avatar"
    >
      <span
        class="ant-avatar ant-avatar-circle emotion-0"
        id="undefined_id"
      >
        <span
          class="ant-avatar-string"
          style="transform: scale(1) translateX(-50%);"
        />
      </span>
    </div>
    <div
      class="ant-comment-content"
    >
      <div
        class="ant-comment-content-detail"
      >
        <div
          data-testid="area-content"
          style="border: 1px solid red; padding: 10px;"
        >
          content
        </div>
      </div>
      <ul
        class="ant-comment-actions"
      >
        <li />
      </ul>
    </div>
  </div>
</div>
`;

exports[`Render properties.author - value[0] 1`] = `
<div
  class="ant-comment"
  id="properties.author"
>
  <div
    class="ant-comment-inner"
  >
    <div
      class="ant-comment-avatar"
    >
      <span
        class="ant-avatar ant-avatar-circle emotion-0"
        id="undefined_id"
      >
        <span
          class="ant-avatar-string"
          style="transform: scale(1) translateX(-50%);"
        >
          Co
        </span>
      </span>
    </div>
    <div
      class="ant-comment-content"
    >
      <div
        class="ant-comment-content-author"
      >
        <span
          class="ant-comment-content-author-name"
        >
          Comment author
        </span>
      </div>
      <div
        class="ant-comment-content-detail"
      >
        <div
          data-testid="area-content"
          style="border: 1px solid red; padding: 10px;"
        >
          content
        </div>
      </div>
      <ul
        class="ant-comment-actions"
      >
        <li />
      </ul>
    </div>
  </div>
</div>
`;

exports[`Render properties.content - value[0] 1`] = `
<div
  class="ant-comment"
  id="properties.content"
>
  <div
    class="ant-comment-inner"
  >
    <div
      class="ant-comment-avatar"
    >
      <span
        class="ant-avatar ant-avatar-circle emotion-0"
        id="undefined_id"
      >
        <span
          class="ant-avatar-string"
          style="transform: scale(1) translateX(-50%);"
        >
          Co
        </span>
      </span>
    </div>
    <div
      class="ant-comment-content"
    >
      <div
        class="ant-comment-content-author"
      >
        <span
          class="ant-comment-content-author-name"
        >
          Comment author
        </span>
      </div>
      <div
        class="ant-comment-content-detail"
      >
        Comment content for user
      </div>
      <ul
        class="ant-comment-actions"
      >
        <li />
      </ul>
    </div>
  </div>
</div>
`;

exports[`Render properties.datetime - value[0] 1`] = `
<div
  class="ant-comment"
  id="properties.datetime"
>
  <div
    class="ant-comment-inner"
  >
    <div
      class="ant-comment-avatar"
    >
      <span
        class="ant-avatar ant-avatar-circle emotion-0"
        id="undefined_id"
      >
        <span
          class="ant-avatar-string"
          style="transform: scale(1) translateX(-50%);"
        >
          Co
        </span>
      </span>
    </div>
    <div
      class="ant-comment-content"
    >
      <div
        class="ant-comment-content-author"
      >
        <span
          class="ant-comment-content-author-name"
        >
          Comment author
        </span>
        <span
          class="ant-comment-content-author-time"
        >
          2020-01-20T00:00:00.000Z
        </span>
      </div>
      <div
        class="ant-comment-content-detail"
      >
        Comment content for user
      </div>
      <ul
        class="ant-comment-actions"
      >
        <li />
      </ul>
    </div>
  </div>
</div>
`;

exports[`Render required = true areas.actions - value[0] 1`] = `
<div
  class="ant-comment"
  id="areas.actions"
>
  <div
    class="ant-comment-inner"
  >
    <div
      class="ant-comment-avatar"
    >
      <span
        class="ant-avatar ant-avatar-circle emotion-0"
        id="undefined_id"
      >
        <span
          class="ant-avatar-string"
          style="transform: scale(1) translateX(-50%);"
        >
          Co
        </span>
      </span>
    </div>
    <div
      class="ant-comment-content"
    >
      <div
        class="ant-comment-content-author"
      >
        <span
          class="ant-comment-content-author-name"
        >
          Comment author
        </span>
        <span
          class="ant-comment-content-author-time"
        >
          This is not the time
        </span>
      </div>
      <div
        class="ant-comment-content-detail"
      >
        Comment content for user
      </div>
      <ul
        class="ant-comment-actions"
      >
        <li>
          <div
            data-testid="area-actions"
            style="border: 1px solid red; padding: 10px;"
          >
            actions
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Render required = true default - value[0] 1`] = `
<div
  class="ant-comment"
  id="default"
>
  <div
    class="ant-comment-inner"
  >
    <div
      class="ant-comment-avatar"
    >
      <span
        class="ant-avatar ant-avatar-circle emotion-0"
        id="undefined_id"
      >
        <span
          class="ant-avatar-string"
          style="transform: scale(1) translateX(-50%);"
        />
      </span>
    </div>
    <div
      class="ant-comment-content"
    >
      <div
        class="ant-comment-content-detail"
      >
        <div
          data-testid="area-content"
          style="border: 1px solid red; padding: 10px;"
        >
          content
        </div>
      </div>
      <ul
        class="ant-comment-actions"
      >
        <li />
      </ul>
    </div>
  </div>
</div>
`;

exports[`Render required = true properties.author - value[0] 1`] = `
<div
  class="ant-comment"
  id="properties.author"
>
  <div
    class="ant-comment-inner"
  >
    <div
      class="ant-comment-avatar"
    >
      <span
        class="ant-avatar ant-avatar-circle emotion-0"
        id="undefined_id"
      >
        <span
          class="ant-avatar-string"
          style="transform: scale(1) translateX(-50%);"
        >
          Co
        </span>
      </span>
    </div>
    <div
      class="ant-comment-content"
    >
      <div
        class="ant-comment-content-author"
      >
        <span
          class="ant-comment-content-author-name"
        >
          Comment author
        </span>
      </div>
      <div
        class="ant-comment-content-detail"
      >
        <div
          data-testid="area-content"
          style="border: 1px solid red; padding: 10px;"
        >
          content
        </div>
      </div>
      <ul
        class="ant-comment-actions"
      >
        <li />
      </ul>
    </div>
  </div>
</div>
`;

exports[`Render required = true properties.content - value[0] 1`] = `
<div
  class="ant-comment"
  id="properties.content"
>
  <div
    class="ant-comment-inner"
  >
    <div
      class="ant-comment-avatar"
    >
      <span
        class="ant-avatar ant-avatar-circle emotion-0"
        id="undefined_id"
      >
        <span
          class="ant-avatar-string"
          style="transform: scale(1) translateX(-50%);"
        >
          Co
        </span>
      </span>
    </div>
    <div
      class="ant-comment-content"
    >
      <div
        class="ant-comment-content-author"
      >
        <span
          class="ant-comment-content-author-name"
        >
          Comment author
        </span>
      </div>
      <div
        class="ant-comment-content-detail"
      >
        Comment content for user
      </div>
      <ul
        class="ant-comment-actions"
      >
        <li />
      </ul>
    </div>
  </div>
</div>
`;

exports[`Render required = true properties.datetime - value[0] 1`] = `
<div
  class="ant-comment"
  id="properties.datetime"
>
  <div
    class="ant-comment-inner"
  >
    <div
      class="ant-comment-avatar"
    >
      <span
        class="ant-avatar ant-avatar-circle emotion-0"
        id="undefined_id"
      >
        <span
          class="ant-avatar-string"
          style="transform: scale(1) translateX(-50%);"
        >
          Co
        </span>
      </span>
    </div>
    <div
      class="ant-comment-content"
    >
      <div
        class="ant-comment-content-author"
      >
        <span
          class="ant-comment-content-author-name"
        >
          Comment author
        </span>
        <span
          class="ant-comment-content-author-time"
        >
          2020-01-20T00:00:00.000Z
        </span>
      </div>
      <div
        class="ant-comment-content-detail"
      >
        Comment content for user
      </div>
      <ul
        class="ant-comment-actions"
      >
        <li />
      </ul>
    </div>
  </div>
</div>
`;

exports[`Test Schema areas.actions 1`] = `true`;

exports[`Test Schema areas.actions 2`] = `null`;

exports[`Test Schema default 1`] = `true`;

exports[`Test Schema default 2`] = `null`;

exports[`Test Schema properties.author 1`] = `true`;

exports[`Test Schema properties.author 2`] = `null`;

exports[`Test Schema properties.content 1`] = `true`;

exports[`Test Schema properties.content 2`] = `null`;

exports[`Test Schema properties.datetime 1`] = `true`;

exports[`Test Schema properties.datetime 2`] = `null`;
